// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InpuField render correctly 1`] = `
<div
  className="control"
>
  <input
    className="is-label input  undefined"
    id="undefined"
    type="date"
  />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  />
</div>
`;

exports[`InpuField render correctly 2`] = `
<div
  className="control"
>
  <input
    className="is-label input  is-danger"
    id="undefined"
    title="it has error"
    type="date"
  />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  >
    it has error
  </p>
</div>
`;

exports[`InpuField render correctly 3`] = `
<div
  className="control"
>
  <input
    className="is-label input  undefined"
    id="name"
    name="name"
    placeholder="holder"
    type="date"
    value="value"
  />
  <p
    style={
      Object {
        "color": "red",
      }
    }
  />
</div>
`;
